--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <iframe src="https://www.tegridyfarms.com" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0%;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
 
-<link rel="icon" type="image/png" href="/favicon.png"/>
+<link rel="favicon" type="image/x-icon" href="favicon.png">
