--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
 <iframe src="https://www.tegridyfarms.com" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0%;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
 
-<link rel="shortcut icon" type="image/png" href="/tegridy.png">
+ <link rel="icon" sizes="192x192" href="https://static.wixstatic.com/media/157b10_af89c6721dae43d7831fbdb95a66852e%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/157b10_af89c6721dae43d7831fbdb95a66852e%7Emv2.png">
+  <link rel="shortcut icon" href="https://static.wixstatic.com/media/157b10_af89c6721dae43d7831fbdb95a66852e%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/157b10_af89c6721dae43d7831fbdb95a66852e%7Emv2.png" type="image/png"/>
+  <link rel="apple-touch-icon" href="https://static.wixstatic.com/media/157b10_af89c6721dae43d7831fbdb95a66852e%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/157b10_af89c6721dae43d7831fbdb95a66852e%7Emv2.png" type="image/png"/>
+  
+  </body>
+</html>
